# dbt-agent-skills

./: CLAUDE.md  README.md  RELEASING.md  dev-requirements.txt  pyproject.toml  tile.json
.changes/unreleased/: Under the Hood-20260218-100000.yaml  Under the Hood-20260220-103318.yaml
.claude-plugin/: marketplace.json
.github/ISSUE_TEMPLATE/: blank.md
.github/workflows/: codeowners-check.yml  publish-tile.yml
dbt-commands/discovering-data/: SKILL.md
dbt-commands/evaluating-impact-of-a-dbt-model-change/: SKILL.md
dbt-docs/fetch-dbt-docs/: SKILL.md
dbt-mcp-server/configure-dbt-mcp-server/: SKILL.md
dbt-operations/troubleshooting-dbt-job-errors/: SKILL.md
dbt-semantic-layer/add-time-spine-metricflow-semantic-layer/: SKILL.md
dbt-semantic-layer/build-semantic-layer/: SKILL.md
evals/: .gitignore  README.md  pyproject.toml
evals/runs/: .gitignore
evals/scenarios/: .gitignore
evals/scenarios/dbt-docs-arguments/: prompt.txt  skill-sets.yaml
evals/scenarios/dbt-docs-unit-test-fixtures/: prompt.txt
evals/scenarios/dbt-job-failure/: .env.example  prompt.txt  skill-sets.yaml
evals/scenarios/dbt-unit-test-format-choice/: skill-sets.yaml
evals/scenarios/example-yaml-error/: prompt.txt  skill-sets.yaml
evals/scenarios/example-yaml-error/context/models/: broken.yml
evals/src/skill_eval/: cli.py  grader.py  models.py  reporter.py  runner.py  selector.py
evals/tests/: test_cli.py  test_cli_commands.py  test_grader.py  test_models.py  test_runner.py  test_selector.py
scripts/: generate_marketplace.py
using-dbt-for-analytics-engineering/: SKILL.md
(+31 files in other folders)
